# gh-autoloop

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: autoloop.yml
specs/: architecture.md
src/gh_autoloop/: __init__.py  cli.py  executor.py  git_ops.py  loop.py  planner.py  verifier.py
tests/: test_executor.py  test_git_ops.py  test_integration.py  test_loop.py  test_planner.py  test_verifier.py
